feat: update solution for day 12 part 1